gap fixing

--- a/frontend/src/pages/HomePage.module.css
+++ b/frontend/src/pages/HomePage.module.css
@@ -97,11 +97,12 @@
 }
 .socials-container {
   display: flex; /* Arrange icons in a row */
-  justify-content: space-around; /* Center them horizontally */
 }
 
 .socialIcon:link,
 .socialIcon:visited {
+  flex-grow: 1;
+  text-align: center;
   color: #444; /* Default icon color */
   text-decoration: none; /* Gets rid of the underline */
   transition: transform 0.2s ease-in-out, color 0.2s;
